# miniSQL

./: .gitignore  README.md  appveyor.yml  design.md  main.cpp  meson.build  miniSQL.sln
BPTTest/: .text$mn  BPTTest.cpp  BPTTest.vcxproj.filters
BufferManagerTest/: BufferManagerTest.cpp  BufferManagerTest.vcxproj  BufferManagerTest.vcxproj.filters
CatalogManagerTest/: CatalogManagerTest.cpp  CatalogManagerTest.vcxproj  CatalogManagerTest.vcxproj.filters
IndexManagerTest/: IndexManagerTest.cpp  IndexManagerTest.vcxproj  IndexManagerTest.vcxproj.filters
Project/: Project.vcxproj  Project.vcxproj.filters  main.cpp
Project/tests/: table-insert-delete-1.sql  test-1000.sql  test-1w.7z
RecordManagerTest/: RecordManagerTest.cpp  RecordManagerTest.vcxproj  RecordManagerTest.vcxproj.filters
doc/: README.md
include/: API.h  App.h  BufferManager.cpp  BufferManager.h  CatalogManager.h  DataBlock.h  IndexManager.h  Interpreter.h  RecordManager.h  SqlScanner.h  Writer.h  app.h  bplustree.h  buffermanager.h  catalogmanager.h  datablock.h  def.h  indexinfo.h  indexmanager.h  interpreter.h  recordmanager.h  sqlscanner.h  writer.h
old/vs/MiniSqlSetup/: MiniSqlSetup.vdproj
old/vs/pch/: .bss  .debug$S
old/vs/test/BPTTest/: .debug$S  (+2 more)
pch/: .drectve
src/: APP.cpp  BufferManager.cpp  CatalogManager.cpp  DataBlock.cpp  IndexManager.cpp  Interpreter.cpp  RecordManager.cpp  SqlScanner.cpp  Writer.cpp  app.cpp  buffermanager.cpp  catalogmanager.cpp  datablock.cpp  def.cpp  indexmanager.cpp  interpreter.cpp  recordmanager.cpp  sqlscanner.cpp  writer.cpp
test/: test.sql
(+7 files in other folders)
